// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render examples after fetch 1`] = `
<div
  className="container"
>
  Examples:
  <Link
    href="/genre/genre-1"
    key="genre-1"
  >
    <a
      className="example"
    >
      Genre 1
    </a>
  </Link>
  <Link
    href="/genre/genre-2"
    key="genre-2"
  >
    <a
      className="example"
    >
      Genre 2
    </a>
  </Link>
  <Link
    href="/genre/genre-3"
    key="genre-3"
  >
    <a
      className="example"
    >
      Genre 3
    </a>
  </Link>
</div>
`;

exports[`should render with loaders if loading 1`] = `
<div
  className="container"
>
  Examples:
  <a
    className="example"
  >
    <Loader />
  </a>
  <a
    className="example"
  >
    <Loader />
  </a>
  <a
    className="example"
  >
    <Loader />
  </a>
</div>
`;

exports[`should return null if no data 1`] = `""`;
